Fix scrollbar issue

--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,13 @@
 /* *****************
  * * GLOBAL STYLES *
  * ***************** */
+ 
 * {
     font-family: 'Barlow', sans-serif, 'Courier New', 'Courier', 'monospace';
+    overflow-y: visible;
+}
+
+body {
     overflow-x: hidden;
 }
 
